test/fails/bad_parsing/decl_command.lgl
void main() {
    int skip = 5;
}
